# MyClaw

./: .gitignore  Cargo.toml  DEVELOPMENT.md  build.rs  myclaw.toml.example
.github/workflows/: build.yml
application/runtime/: Cargo.toml
application/runtime/src/: lib.rs
application/runtime/src/agent/: agent.rs  mod.rs  session_manager.rs  skills.rs
application/runtime/src/orchestrator/: mod.rs  orchestrator.rs
application/runtime/src/prompt/: mod.rs
application/zeroclaw-runtime/: Cargo.toml
application/zeroclaw-runtime/src/: lib.rs
clients/web/: index.html  package-lock.json  package.json  vite.config.ts
clients/web/src/: App.tsx
cmd/myclaw/: Cargo.toml
cmd/myclaw/src/: daemon.rs  lib.rs  main.rs
docs/: DEVELOPMENT.md  architecture.md  context-compaction-refactor.md  context-engine-refactor-v7.md  context-engine-refactor-v8.md  date-injection-and-compaction-timing.md  heartbeat-design.md  memory-system-design.md  prompt-engine-rfc.md  provider-refactor-rfc.md
domain/capability/: Cargo.toml
domain/capability/src/: capability.rs  chat.rs  lib.rs  service_registry.rs  tool.rs  tts.rs  video.rs
domain/memory/: Cargo.toml
domain/memory/src/: consolidation.rs  embeddings.rs  hygiene.rs  lib.rs  qdrant.rs  sqlite.rs  traits.rs
domain/session/: Cargo.toml
domain/session/src/: lib.rs
domain/zeroclaw-capability/: Cargo.toml
domain/zeroclaw-capability/src/: capability.rs  chat.rs  embedding.rs  image.rs  lib.rs  mod.rs  search.rs  service_registry.rs  stt.rs
domain/zeroclaw-memory/: Cargo.toml
domain/zeroclaw-memory/src/: lib.rs  memory.rs  private.rs  shared.rs
domain/zeroclaw-session/: Cargo.toml
domain/zeroclaw-session/src/: lib.rs
infrastructure/config/: Cargo.toml
infrastructure/config/src/: lib.rs  mcp.rs  routing.rs
infrastructure/mcp/: Cargo.toml
infrastructure/mcp/src/: deferred.rs  protocol.rs  tool.rs  tool_trait.rs  transport.rs
infrastructure/mcp/src/transport/: mod.rs
infrastructure/memory-storage/: Cargo.toml
infrastructure/memory-storage/src/: embedding.rs  lib.rs  sqlite.rs  vector.rs
infrastructure/providers/: Cargo.toml
infrastructure/providers/src/: anthropic.rs  fallback.rs  glm.rs  http.rs  kimi.rs  lib.rs  minimax.rs  openai.rs  shared.rs
infrastructure/registry/: Cargo.toml
infrastructure/registry/src/: capability.rs  lib.rs  registry.rs  routing.rs
infrastructure/tools/: Cargo.toml
infrastructure/tools/src/: ask_user.rs  calculator.rs  file_ops.rs  http.rs  lib.rs  memory.rs  search.rs  shell.rs  web.rs  web_search.rs
infrastructure/zeroclaw-mcp/: Cargo.toml
infrastructure/zeroclaw-mcp/src/: client.rs  deferred.rs  lib.rs  tool.rs  transport.rs
infrastructure/zeroclaw-memory-storage/: Cargo.toml
infrastructure/zeroclaw-memory-storage/src/: lib.rs
infrastructure/zeroclaw-providers/: Cargo.toml
infrastructure/zeroclaw-providers/src/: lib.rs
infrastructure/zeroclaw-registry/: Cargo.toml
infrastructure/zeroclaw-registry/src/: capability.rs  lib.rs  registry.rs  routing.rs
infrastructure/zeroclaw-tools/: Cargo.toml
infrastructure/zeroclaw-tools/src/: lib.rs
interface/channels/: Cargo.toml
interface/channels/src/: lib.rs
interface/channels/src/slack/: mod.rs
interface/channels/src/telegram/: mod.rs
interface/channels/src/wechat/: mod.rs
interface/zeroclaw-channels/: Cargo.toml
interface/zeroclaw-channels/src/: lib.rs
orchestration/orchestrator/: Cargo.toml
orchestration/orchestrator/src/: daemon.rs  lib.rs  main.rs  orchestrator.rs
orchestration/zeroclaw-orchestrator/: Cargo.toml
orchestration/zeroclaw-orchestrator/src/: orchestrator.rs
scripts/: migrate_session_keys.sh
src/: channels_message.rs  daemon.rs  hot_switch.rs  lib.rs  main.rs  signal.rs  str_utils.rs
src/agents/: agent_impl.rs  agent_loader.rs  agent_mod.rs  attachment.rs  compaction_executor.rs  compaction_policy.rs  context_engine.rs  cron_loader.rs  delegation.rs  error.rs  heartbeat_tasks.rs  loop_breaker.rs  mcp_manager.rs  mod.rs  orchestrator.rs  prompt.rs  recovery.rs  request_builder.rs  resource_provider.rs  scheduler.rs  session_manager.rs  skill_loader.rs  skills.rs  slash_command.rs  sub_agent.rs  tool_executor.rs  tool_registry.rs  turn_event.rs  watcher.rs  work_unit.rs
src/agents/agent_impl/: compaction.rs  images.rs  mod.rs  run.rs  tools.rs  types.rs
src/agents/scheduling/: cron_loader.rs  cron_store.rs  cron_types.rs  heartbeat_tasks.rs  mod.rs  scheduler.rs  webhook_loader.rs  work_unit.rs
src/agents/workspace/: agent_loader.rs  mod.rs  skill_loader.rs  skills.rs
src/channels/: client.rs  message.rs  mod.rs  qqbot.rs  telegram.rs  wechat.rs
src/cli/: cmd_chat.rs  cmd_completion.rs  cmd_config.rs  cmd_doctor.rs  cmd_exec.rs  cmd_reload.rs  cmd_restart.rs  cmd_status.rs  cmd_stop.rs  cmd_tools.rs  cmd_tui.rs  cmd_update.rs  mod.rs  signal.rs
src/config/: agent.rs  channel.rs  lib.rs  memory.rs  mod.rs  provider.rs  routing.rs  scheduler.rs  sub_agent.rs
src/mcp/: client.rs  config_types.rs  deferred.rs  lib.rs  mod.rs  protocol.rs  tool.rs  tool_trait.rs  transport.rs
src/memory/: mod.rs
src/providers/: anthropic.rs  capability.rs  capability_chat.rs  capability_embedding.rs  capability_tool.rs  credential_pool.rs  error_class.rs  fallback.rs  glm.rs  google.rs  http.rs  image.rs  kimi.rs  lib.rs  minimax.rs  mod.rs  openai.rs  provider_factory.rs  provider_id.rs  search.rs  service_registry.rs  shared.rs  stt.rs  tts.rs  video.rs  xiaomi.rs
src/providers/protocols/: mod.rs
src/registry/: mod.rs  routing.rs
src/storage/: json_file.rs  lib.rs  memory.rs  mod.rs  policy.rs  private.rs  session.rs  shared.rs  sqlite.rs  traits.rs  types.rs
src/tools/: agent_kill.rs  agent_list.rs  ask_user.rs  calculator.rs  cronjob_tool.rs  delegate.rs  file_ops.rs  goal.rs  http.rs  lib.rs  list_dir.rs  memory.rs  mod.rs  plan.rs  search.rs  search_cooldown.rs  self_tool.rs  shell.rs  skill_tool.rs  task.rs  tool_search.rs  truncation.rs  web.rs  web_search.rs
src/tui/: app.rs  mod.rs
workspace/agents/coder/: AGENT.md
workspace/agents/researcher/: AGENT.md
(+23 files in other folders)
