[workspace]
resolver = "2"
members = [
    "orchestration/orchestrator",
    "interface/channels",
    "application/runtime",
    "domain/capability",
    "domain/memory",
    "domain/session",
    "infrastructure/config",
    "infrastructure/registry",
    "infrastructure/memory-storage",
    "infrastructure/providers",
    "infrastructure/tools",
    "infrastructure/mcp",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
hex = "0.4"
rand = "0.10"
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac-sha256 = "1"
base64 = "0.22"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7"
tracing = "0.1"
uuid = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"

# Internal crates
myclaw-config = { path = "infrastructure/config" }
