[package]
name = "myclaw"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "myclaw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket (QQ Bot)
tokio-tungstenite = { version = "0.26", features = ["native-tls"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Async utilities
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
parking_lot = "0.12"
tokio-stream = "0.1"
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
base64 = "0.22"
rand = "0.10"
sha2 = "0.10"
hmac-sha256 = "1"
regex = "1"
dashmap = "5"
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
shellexpand = "3.1"
tempfile = "3"
directories = "5"
toml = "0.8"
async-trait = "0.1"
notify = { version = "7", features = ["macos_kqueue"] }

# Cron expression parsing
cron = "0.15"

# HTTP server for webhook
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"

# HMAC for webhook signature verification
hmac = "0.12"

# WeChat crypto (feature-gated)
aes = { version = "0.8", optional = true }
ecb = { version = "0.1", optional = true }
md-5 = { version = "0.10", optional = true }
urlencoding = { version = "2.1", optional = true }

[features]
default = ["wechat", "qqbot", "telegram"]
qqbot = ["tokio-tungstenite"]
wechat = ["aes", "ecb", "md-5", "urlencoding"]
telegram = []

[profile.release]
opt-level = 3
lto = true
