[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace deps
tokio = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

# Local crates
capability = { path = "../../domain/capability" }
session = { path = "../../domain/session" }
mcp = { path = "../../infrastructure/mcp" }
registry = { path = "../../infrastructure/registry" }
