[package]
name = "myclaw-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace deps
tokio = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
dashmap = "5"

# Domain crates (DDD: Application depends on Domain)
myclaw-capability = { path = "../../domain/capability" }
myclaw-session = { path = "../../domain/session" }

# Interface: Channel trait (Application coordinates interface adapters)
# No features — only needs the trait + types, not concrete implementations.
myclaw-channels = { path = "../../interface/channels" }
