[package]
name = "myclaw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myclaw"
path = "src/main.rs"

[dependencies]
# Application layer
runtime = { path = "../../application/runtime" }

# Interface layer (Channel adapters with feature flags)
channels = { path = "../../interface/channels", features = ["wechat", "telegram"] }

# Domain
session = { path = "../../domain/session" }

# Infrastructure (Composition Root wires these up)
config = { path = "../../infrastructure/config" }
registry = { path = "../../infrastructure/registry" }
providers = { path = "../../infrastructure/providers" }
tools = { path = "../../infrastructure/tools" }
memory-storage = { path = "../../infrastructure/memory-storage" }

# External
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
reqwest = { workspace = true }
structopt = "0.3"
shellexpand = "3.1"
