[package]
name = "myclaw"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "myclaw"
path = "src/main.rs"

[dependencies]
# Application layer
myclaw-runtime = { path = "../../application/runtime" }

# Interface layer (Channel adapters with feature flags)
myclaw-channels = { path = "../../interface/channels", features = ["wechat", "telegram"] }

# Domain
myclaw-session = { path = "../../domain/session" }

# Infrastructure (Composition Root wires these up)
myclaw-config = { path = "../../infrastructure/config" }
myclaw-registry = { path = "../../infrastructure/registry" }
myclaw-providers = { path = "../../infrastructure/providers" }
myclaw-tools = { path = "../../infrastructure/tools" }
myclaw-memory-storage = { path = "../../infrastructure/memory-storage" }

# External
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
reqwest = { workspace = true }
structopt = "0.3"
shellexpand = "3.1"
