[package]
name = "zeroclaw-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }

# Re-export the Memory trait and types from zeroclaw-api.
zeroclaw-api.workspace = true
