[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Use domain capability types
capability = { path = "../../domain/capability" }

# Use config types for FromConfig builder
config = { path = "../config" }

# FallbackChatProvider wrapping
providers = { path = "../providers" }
