[package]
name = "myclaw-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Use domain capability types
myclaw-capability = { path = "../../domain/capability" }

# Use config types for FromConfig builder
myclaw-config = { path = "../config" }

# FallbackChatProvider wrapping
myclaw-providers = { path = "../providers" }
