[package]
name = "tools"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true
regex.workspace = true

mcp = { path = "../mcp" }

[dev-dependencies]
tempfile.workspace = true
