[package]
name = "zeroclaw-provider-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Re-export from original crate (path overrides workspace dep for this dep only)
zeroclaw-providers = { path = "/home/ubuntu/.zeroclaw/src/crates/zeroclaw-providers" }
zeroclaw-api = { path = "/home/ubuntu/.zeroclaw/src/crates/zeroclaw-api" }
zeroclaw-config = { path = "/home/ubuntu/.zeroclaw/src/crates/zeroclaw-config" }