[package]
name = "zeroclaw-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Use domain capability types
zeroclaw-capability = { path = "../../domain/zeroclaw-capability" }

# Re-export from original crate (path overrides workspace dep for this dep only)
zeroclaw-api = { path = "/home/ubuntu/.zeroclaw/src/crates/zeroclaw-api" }
zeroclaw-config = { path = "/home/ubuntu/.zeroclaw/src/crates/zeroclaw-config" }