[package]
name = "zeroclaw-tools-infra"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true
regex.workspace = true

zeroclaw-api = { path = "/home/ubuntu/.zeroclaw/src/crates/zeroclaw-api" }
zeroclaw-config = { path = "/home/ubuntu/.zeroclaw/src/crates/zeroclaw-config" }
zeroclaw-mcp = { path = "/home/ubuntu/.zeroclaw/workspace/MyClaw/infrastructure/zeroclaw-mcp" }

# Re-export from original crate
zeroclaw-tools = { path = "/home/ubuntu/.zeroclaw/src/crates/zeroclaw-tools" }

[dev-dependencies]
tempfile.workspace = true