[package]
name = "myclaw-channels"
version = "0.1.0"
edition = "2024"

[features]
default = []
wechat = ["dep:aes", "dep:ecb", "dep:md-5", "dep:urlencoding"]
telegram = []

[dependencies]
# Workspace shared
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
hmac-sha256.workspace = true
parking_lot.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

# Config
myclaw-config = { workspace = true }

# WeChat-specific crypto dependencies
aes = { version = "0.8", optional = true }
ecb = { version = "0.1", optional = true }
md-5 = { version = "0.10", optional = true }
urlencoding = { version = "2.1", optional = true }

# Shared across channels
chrono.workspace = true
hex.workspace = true
rand.workspace = true
