[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myclaw"
path = "src/main.rs"

[dependencies]
channels = { path = "../../interface/channels", features = ["wechat", "telegram"] }
runtime = { path = "../../application/runtime" }
session = { path = "../../domain/session" }
capability = { path = "../../domain/capability" }
config = { path = "../../infrastructure/config" }
memory-storage = { path = "../../infrastructure/memory-storage" }
registry = { path = "../../infrastructure/registry" }
providers = { path = "../../infrastructure/providers" }
tools = { path = "../../infrastructure/tools" }

tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "signal"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = "1"
reqwest = { workspace = true }
structopt = "0.3"
shellexpand = "3.1"
